applications/sbom-service/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: openeuler-sbom-service
  name: openeuler-sbom-service
