applications/sbom-service/server.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sbom-server
  namespace: openeuler-sbom-service
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: sbom-server
  template:
    metadata:
      labels:
        app: sbom-server
    spec:
      containers:
      - name: sbom-server
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-sbom-server:1e6de9df5d118d25ee4699d79dc5e693334b73f2
        resources:
          requests:
            cpu: 4000m
            memory: 8000Mi
          limits:
            cpu: 4000m
            memory: 8000Mi
        readinessProbe:
          tcpSocket:
            port: 13331
          initialDelaySeconds: 10
          failureThreshold: 3
          successThreshold: 1
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 13331
          initialDelaySeconds: 20
          periodSeconds: 20
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /var/db_secrets
          name: db-secret
      volumes:
      - name: db-secret
        secret:
          secretName: sbom-server-db-secrets
