applications/sbom-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sbom-website-service
  namespace: openeuler-sbom-service
spec:
  ports:
    - name: http-port
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: sbom-website
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: sbom-server-service
  namespace: openeuler-sbom-service
spec:
  ports:
    - name: http-port
      protocol: TCP
      port: 80
      targetPort: 13331
  selector:
    app: sbom-server
  type: ClusterIP
